# Code

./: index.md
C#/Blackjack/: Client.cs  Program.cs
C#/Hamming Codes/: Hamming Codes.csproj  Program.cs
C#/Multi-Layered Neural Network/: Multi-Layered Neural Network.csproj  Program.cs
C#/TEST/: Program.cs  Test.cs
C#/TEST Script/: Program.cs
C++/Bits Class/: main.cpp
C++/Enigma Machine/: main.cpp
C++/GIF/: main.cpp
C++/Implement - List/: main.cpp
C++/Implement - Queue/: main.cpp
C++/Implement - Stack/: main.cpp
C++/Mangos/: main_mango.cpp
C++/Math - Matrix Operations/: in.txt  main.cpp
C++/Problem - Append or Clone/: main.cpp
C++/Problem - Coin Change/: main.cpp
C++/Problem - N-Queens/: main.cpp
C++/STRING MATCHING/: model.txt
C++/Sorting - Merge Sorts/: main.cpp
C++/Sorting Algorithm Class/: arr.txt  sort.cpp
C++/TEST/: test.cpp
C/Data Types/: main.c
C/Display - Binary Tree/: main.c
C/Fast Inverse Square Root/: mian.c
C/Fibonacci Strings/: main.c
C/Games - n x n TIC-TAC-TOE/: main.c
C/Pula mea/: main.c
C/Quick Sort/: main.c
C/STRING SEARCHING/: source.txt
C/Struct - Linked List, Double-Linked List/: main.c
C/TEST/: in.txt  main_test.c  main_test.cpp
C/getLine - pointers/: in.txt  main.c
Chrome Extension/: manifest.json
Java/Blackjack/: Client.java  GameController.java  Main.java  layout.fxml
Java/Java Project/: .project
Java/Matrix/: Matrix.java
Java/TEST/: Test.java
Learning/Algorithms/: Program.cs
Verilog/: regfl.v  run_pktmux.txt
tests/Rust/test/: Cargo.toml
tests/Rust/test/src/: input.json
(+1010 files in other folders)
