[package]
edition = "2021"
name = "test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
